--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -1,6 +1,6 @@
 #cabecalho{
     background-color: #1b1b1b;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -68,9 +68,8 @@
 #landingMainText div{
     bottom: -100px;
     background-color: #c0c0c0;
-    width: 200px;
-    height: 220px;
     border-radius: 5px;
+    padding-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,6 +84,8 @@
 
 #tema{
     position: absolute;
+    height: 100%;
+    width: 100%;
     top: 100px;
     display: flex;
     flex-direction: column;
@@ -98,7 +99,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 5px;
+    padding: 0 10px;
     width: 100%;
 }
 
