--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -12,20 +12,31 @@
 .activities-button:hover{
     background-color: transparent;
 }
-#retangulo-interno{
-    color: #fff;
-}
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
 
     #first-activitie img{
         width: 100%;
-        height: 100%;
-        border-radius: 20px;
+        max-height: 300px;
+        border-radius: 20px 20px 0 0;
     }
     #img-description{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
         height: 100%;
+        padding: 20px;
+    }
+    .description{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .description h1{
+        margin-bottom: 10px;
     }
     #first-activitie{
         flex-direction: column;
@@ -34,212 +45,58 @@
     }
     #image-description{
         width: 100%;
-        height: 300px;
         padding: 10px;
     }
-    #seta-indicadora{
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 500px;
-        width: 100%;
-    }
     
-    #triangulo{
-        border-top: 127px solid transparent;
-        border-left: 127px solid orange;
-        border-right: 127px solid transparent;
-        border-bottom: 127px solid orange;
-        width: 0;
-        transform: rotate(135deg);
-        position: absolute;
-        top: -156px;
-        left: calc(100% / 2 - 120px);
-    }
-    
-    #retangulo{
-        width: calc(100% - 40px);
-        height: 400px;
-        background-color: orange;
-        position: absolute;
-        top: -30px;
-    }
-    
-    #cauda{
-        z-index: -1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 180px solid orange;
-        border-top: 70px solid transparent;
-        border-bottom: 0px solid;
-        height: 1px;
-        width: 0px;
-        transform: rotate(180deg);
-        position: absolute;
-        top: 369px;
-        left: calc(100% / 2 - 175px);
-    }
-    
-    #seta-interna{
-        position: relative;
-    }
-    
-    #triangulo-interno{
-        border-top: 127px solid transparent;
-        border-left: 127px solid blueviolet;
-        border-right: 127px solid transparent;
-        border-bottom: 127px solid blueviolet;
-        width: 0;
-        transform: rotate(135deg);
-        position: absolute;
-        top: -163px;
-        left: calc(100% / 2 - 140px);
-    }
-    #retangulo-interno h1{
-        font-size: 2em;
-    }
-    #retangulo-interno p{
-        font-size: 1.5em;
-        text-align: center;
-    }
-    #retangulo-interno h1, #retangulo-interno p{
-        color: #fff;
-    }
-    
-    #retangulo-interno{
-        width: calc(100% - 20px);
-        height: 400px;
-        background-color: blueviolet;
-        position: absolute;
-        top: -40px;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        align-items: center;
-        justify-content: center;
-        padding: 20px;
-    }
-    
-    #cauda-interno{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 176px solid blueviolet;
-        border-top: 70px solid transparent;
-        border-bottom: 0px solid;
-        height: 1px;
-        width: 0px;
-        transform: rotate(180deg);
-        position: absolute;
-        top: 359px;
+    .conpound{
+        border-radius: 20px;
+        background-color: #fff;
     }
 }
 
-@media (min-width: 700px) {
-    
-    #first-activitie{
+@media (min-width: 1000px) {
+    #info{
         display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
+        flex-wrap: wrap;
     }
     #first-activitie img{
-        width: 500px;
-        height: 100%;
-        border-radius: 20px;
+        width: 100%;
+        height: 200px;
+        border-radius: 20px 20px 0 0;
     }
     #img-description{
-        width: 500px;
-        height: 100%;
-        position: relative;
-    }
-    
-    #triangulo{
-        border-top: 70px solid transparent;
-        border-left: 70px solid orange;
-        border-right: 70px solid transparent;
-        border-bottom: 70px solid orange;
-        width: 0;
-        transform: rotate(45deg);
-        position: absolute;
-        top: 60px;
-        left: -110px;
-    }
-    
-    #retangulo{
-        width: 400px;
-        height: 200px;
-        background-color: orange;
-        position: absolute;
-        top: 30px;
-        left: -40px;
-    }
-    
-    #cauda{
-        z-index: -10;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 100px solid orange;
-        border-top: 70px solid transparent;
-        border-bottom: 0px solid;
-        height: 1px;
-        width: 0px;
-        transform: rotate(90deg);
-        position: absolute;
-        top: 95px;
-        right: 5px;
-    }
-    
-    #seta-interna{
-        position: relative;
-    }
-    
-    
-    #triangulo-interno{
-        border-top: 70px solid transparent;
-        border-left: 70px solid blueviolet;
-        border-right: 70px solid transparent;
-        border-bottom: 70px solid blueviolet;
-        width: 0;
-        transform: rotate(45deg);
-        position: absolute;
-        top: 60px;
-        left: -110px;
-    }
-    
-    #retangulo-interno{
-        width: 400px;
-        height: 200px;
-        background-color: blueviolet;
-        position: absolute;
-        top: 30px;
-        left: -40px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
         align-items: center;
-        justify-content: center;
+        width: 100%;
+        height: 100%;
         padding: 20px;
     }
-    
-    #cauda-interno{
+    .description{
         display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 100px solid blueviolet;
-        border-top: 70px solid transparent;
-        border-bottom: 0px solid;
-        height: 1px;
-        width: 0px;
-        transform: rotate(90deg);
-        position: absolute;
-        top: 95px;
-        right: -95px;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .description h1{
+        margin-bottom: 10px;
+    }
+    #first-activitie{
+        flex-direction: column;
+        padding: 10px;
+        width: 300px;
+        height: 400px;
+    }
+    #image-description{
+        width: 100%;
+        padding: 10px;
     }
     
+    .conpound{
+        border-radius: 20px;
+        background-color: #fff;
+    }    
 }
 
 
