--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -91,6 +91,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#tema p{
+    text-align: center;
 }
 
 #landingMainText #box{
@@ -118,7 +124,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px;
+    padding: 10px 5px;
 }
 
 .icon_box .description_box p{
