--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -1,5 +1,5 @@
 #homePageHeader{
-    background-color: #c0c0c0;
+    background-color: hsl(0, 0%, 75%);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +26,7 @@
     
 }
 #homePageHeader nav ol li:hover{
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
 }
 
 #menu img{
@@ -44,7 +44,7 @@
         top: 4em;
         right: 0;
         width: 0%;
-        background-color: aqua;
+        background-color: hsl(180, 100%, 50%);
         display: flex;
         flex-direction: column;
         overflow: hidden;
