--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -132,11 +132,29 @@
 }
 
 #landingFooter{
-    position: absolute;
-    bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    padding: 20px;
     color: white;
+}
+
+#seta-para-baixo{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    translate: -10px;
+    width: 20px;
+    height: 20px;
+    border-bottom: 2px solid hsl(0, 100%, 100%);
+    border-top: 2px solid transparent;
+    border-left: 2px solid transparent;
+    border-right: 2px solid hsl(0, 100%, 100%);
+    transform: rotate(45deg);
+}
+
+main{
+    background: linear-gradient(to bottom, #1b1b1b, #525252);
+    color: #fff;
 }
