color schema of entire website changed to black

--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -11,6 +11,10 @@
     display: flex;
     align-items: center;
 }
+#homelogo h2{
+    color: hsl(0, 0%, 100%);
+
+}
 #homeLogo img{
     width: 2.5em;
     margin-right: 20px;
