--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -19,6 +19,10 @@
     display: flex;
     align-items: center;
 }
+#landingLogo h2{
+    color: hsl(0, 0%, 100%);
+
+}
 #landingNavigation img{
     width: 2.5em;
     margin-right: 20px;
