--- a/css/noticias.css
+++ b/css/noticias.css
@@ -5,25 +5,25 @@ main{
 }
 .noticia{
     display: flex;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
     background-color: hsl(0, 0%, 100%);
-    overflow: hidden;
-}
-
-.noticia-expandida{
-    height: 200px;
-}
-.noticia-retraida{
-    height: 120px;
 }
 
 .noticia-componentes{
     display: flex;
     gap: 10px;
 }
+.noticia-imagem{
+    width: 300px;
+    height: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .noticia-imagem img{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 .noticia-texto{
@@ -37,41 +37,9 @@ main{
 .noticia-texto p{
     font-size: 14px;
 }
-.noticia-texto .botao{
-    width: 80px;
-    display: flex;
-    align-items: center;
-    padding: 5px;
-    border-radius: 20px;
-}
-.noticia-texto .botao p{
-    color: orange;
-}
-
-.noticia-icone .back-icone{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    background-color: #c0c0c0;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
 
 .noticia-texto .texto{
     display: flex;
     flex-direction: column;
     gap: 8px;
-}
-
-.noticia-icone .icone{
-    position: absolute;
-    top: 8px;
-    border-bottom: solid 2px #000;
-    border-top: solid 2px transparent;
-    border-left: solid 2px transparent;
-    border-right: solid 2px #000;
-    width: 15px;
-    height: 15px;
-    transform: rotate(45deg);
 }
