--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -13,12 +13,20 @@
     background-color: transparent;
 }
 
+.hamburguer{
+    background-color: #fff;
+}
+
 @media (max-width: 1000px) {
+    #info{
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+    }
 
     #first-activitie img{
         width: 100%;
         max-height: 300px;
-        border-radius: 20px 20px 0 0;
     }
     #img-description{
         display: flex;
@@ -27,6 +35,7 @@
         width: 100%;
         height: 100%;
         padding: 20px;
+        gap: 20px;
     }
     .description{
         display: flex;
@@ -46,12 +55,9 @@
     }
     #first-activitie{
         flex-direction: column;
-        padding: 10px;
-
     }
     #image-description{
         width: 100%;
-        padding: 10px;
     }
     
     .conpound{
