--- a/css/noticias.css
+++ b/css/noticias.css
@@ -15,21 +15,20 @@ main{
     gap: 10px;
 }
 .noticia-imagem{
-    width: 300px;
-    height: 110px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .noticia-imagem img{
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
 }
 
 .noticia-texto{
     display: flex;
     flex-direction: column;
     gap: 15px;
+    padding-right: 5px;
 }
 .noticia-texto h2{
     font-size: 20px;
