--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -11,8 +11,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 #landingNavigation #landingLogo{
@@ -21,7 +21,8 @@
 }
 #landingLogo h2{
     color: hsl(0, 0%, 100%);
-
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
 }
 #landingNavigation img{
     width: 2.5em;
@@ -179,12 +180,11 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
 }
 #landingDescription{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     padding: 20px;
     line-height: 24px;
 }
@@ -196,4 +196,9 @@ main{
 }
 #landingDescription p{
     font-size: 16px;
+}
+
+iframe {
+    width: 100%;
+    aspect-ratio: 16 / 9;
 }
