--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -86,7 +86,7 @@
     align-items: center;
 }
 #blur{
-    background-color: #c0c0c0;
+    background-color: #1b1b1b;
     opacity: 70%;
     filter: blur(15px);
     width: 100%;
@@ -104,9 +104,15 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-
 #tema p{
+    color: hsl(0, 0%, 100%);
     text-align: center;
+    font-size: 20px;
+}
+#tema h1{
+    text-align: center;
+    color: hsl(0, 0%, 100%);
+    font-size: 30px;
 }
 
 #landingMainText #box{
