--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -1,7 +1,9 @@
+
 .activities-button{
     background-color: hsl(39, 100%, 50%);
     border-radius: 20px;
     padding: 10px 20px;
+    width: 100%;
     border: solid 2px hsl(39, 100%, 50%);
     transition: 100ms ease-in-out;
 }
@@ -24,7 +26,7 @@
         gap: 60px;
     }
 
-    #first-activitie img{
+    .activitie img{
         width: 100%;
         max-height: 300px;
     }
@@ -53,7 +55,7 @@
         font-size: 16px;
         
     }
-    #first-activitie{
+    .activitie{
         flex-direction: column;
     }
     #image-description{
@@ -71,7 +73,7 @@
         display: flex;
         flex-wrap: wrap;
     }
-    #first-activitie img{
+    .activitie img{
         width: 100%;
         height: 200px;
         border-radius: 20px 20px 0 0;
@@ -94,7 +96,7 @@
     .description h1{
         margin-bottom: 10px;
     }
-    #first-activitie{
+    .activitie{
         flex-direction: column;
         padding: 10px;
         width: 300px;
