--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -181,35 +181,44 @@ main{
     flex-direction: column;
     gap: 60px;
 }
-#firstSection{
+.firstSection{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-#landingDescription{
+.landingDescription{
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
     line-height: 24px;
 }
-#landingFirstImg{
+.landingFirstImg{
     width: 100%;
 }
-#landingFirstImg img{
+.landingFirstImg img{
     width: 100%;
     max-height: 300px;
     min-height: 200px;
 }
-#landingDescription h2{
+.landingDescription h2{
     font-size: 28px;
 }
-#landingDescription p{
+.landingDescription p{
     font-size: 16px;
 }
 
 iframe {
     width: 100%;
     aspect-ratio: 16 / 9;
+}
+
+@media (min-width: 1000px) {
+    #landingNavigation ol li{
+        color: #fff;
+    }
+    #landingNavigation ol li:hover{
+        color: #000;
+    }
 }
