--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,13 +1,13 @@
 main{
     display: flex;
     flex-direction: column;
-    gap: 14px;
 }
 .noticia{
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: hsl(0, 0%, 100%);
+    border-bottom: 1px solid #000;
 }
 
 .noticia-componentes{
@@ -20,8 +20,8 @@ main{
     justify-content: center;
 }
 .noticia-imagem img{
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
 }
 
 .noticia-texto{
