--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -24,7 +24,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 25px;
 }
-#landingNavigation img{
+#landingNavigation #landingLogo img{
     width: 2.5em;
     margin-right: 20px;
 }
