--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -37,8 +37,8 @@
     padding-bottom: 10px;
 }
 .list-icons img{
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 #homePageHeader nav ol li:hover{
     background-color: hsl(0, 0%, 100%);
@@ -100,6 +100,10 @@
     }
 }
 
-footer p {
-    font-size: 0.8em;
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 100%;
 }
