--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -1,14 +1,13 @@
 
 .activities-button{
-    background-color: hsl(39, 100%, 50%);
-    border-radius: 20px;
+    background-color: #fff;
     padding: 10px 20px;
     width: 100%;
-    border: solid 2px hsl(39, 100%, 50%);
     transition: 100ms ease-in-out;
 }
 .activities-button p{
-    color: hsl(0, 0%, 100%);
+    color: hsl(39, 100%, 50%);
+    font-size: 18px;
 }
 
 .activities-button:hover{
@@ -36,13 +35,17 @@
         align-items: center;
         width: 100%;
         height: 100%;
-        padding: 20px;
-        gap: 20px;
+        gap: 10px;
+    }
+    #img-description a{
+        width: 100%;
     }
     .description{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        padding-left: 20px;
+        padding-right: 20px;
         margin-bottom: 20px;
         width: 100%;
     }
@@ -63,6 +66,9 @@
     }
     
     .conpound{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
         border-radius: 20px;
         background-color: hsl(0, 0%, 100%);
     }
