--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -58,6 +58,18 @@
 .primeira{
     background-image: url(../imagens/primeira_img.jpg);
     background-position: top;
+    background-size: cover;
+    animation-name: backanimation;
+    animation-duration: 200ms;
+}
+
+@keyframes backanimation {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
 .segunda{
     background-image: url(../imagens/1749555959361.jpg);
