--- a/css/noticias.css
+++ b/css/noticias.css
@@ -9,7 +9,14 @@ main{
     background-color: hsl(0, 0%, 100%);
     border-bottom: 1px solid #000;
 }
+ul{
+    padding-left: 30px;
+}
 
+ul li{
+    list-style: disc;
+
+}
 .noticia-componentes{
     display: flex;
     align-items: center;
