--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,11 @@
+
 *{
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif;
     border: none;
     outline: none;
     color: hsl(0, 0%, 0%);
