--- a/css/activitiesDetails.css
+++ b/css/activitiesDetails.css
@@ -35,16 +35,28 @@
     transform: translateY(-50%);
     background-color: aqua;
 }
+.backGroundGallery{
+    z-index: 10000;
+    position: relative;
+    position: absolute;
+    height: 100%;
+}
 .visualizacao{
-    background-color: #c0c0c0;
+    background-color: transparent;
     width: 100%;
     position: absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.visualizacao-extendida{
-   height: 100%;
-}
-.visualizacao-retaida{
-
+.backFilter{
+    position: absolute;
+    top: 0;
+    opacity: 0.9;
+    background-color: #c0c0c0;
+    width: 100%;
+    filter: blur(1px);
 }
 .visualizacao img{
     z-index: 1000;
@@ -68,11 +80,11 @@
     justify-content: center;
     position: absolute;
     border-radius: 50%;
-    top: 50px;
-    right: 50px;
-    width: 60px;
-    height: 60px;
-    background-color: red;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: #e7e7e7;
 }
 .closeNone{
     display: none;
