--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -24,6 +24,7 @@
     display: flex;
     gap: 10px;
     box-shadow: 0px 2px 0px 0px #e0e0e0;
+    z-index: 10000;
 }
 #homePageHeader nav ol li{
     padding: 10px 20px 10px 20px;
