trabalhando no cabecalho retratil e no menu fixo ao cabecalho

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -7,6 +7,7 @@
 
 #landingNavigation{
     height: 4em;
+    overflow: hidden;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
