--- a/css/activitiesDetails.css
+++ b/css/activitiesDetails.css
@@ -98,3 +98,22 @@
     background-color: black;
     transform: rotate(90deg);
 }
+
+
+.flutuante{
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+    position: absolute;
+}
+
+.random{
+    width: 100px;
+    height: 100px;
+    background-color: yellow;
+    position: absolute;
+}
+
+.none{
+    display: none;
+}
