--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -1,11 +1,28 @@
+.cabecalho{
+    position: relative;
+}
 #homePageHeader{
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: hsl(0, 0%, 75%);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 4em;
+    overflow: hidden;
     padding-left: 1em;
     padding-right: 1em;
+}
+main{
+    margin-top: 4em;
+}
+.header-visible{
+    height: 4em;
+}
+.header-invisible{
+    height: 0em;
 }
 #homeLogo{
     display: flex;
@@ -20,11 +37,16 @@
     width: 2.5em;
     margin-right: 10px;
 }
+#homePageHeader nav{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 #homePageHeader nav ol{
     display: flex;
     gap: 10px;
     box-shadow: 0px 2px 0px 0px #e0e0e0;
-    z-index: 10000;
+    z-index: 10;
 }
 #homePageHeader nav ol li{
     padding: 10px 20px 10px 20px;
@@ -45,9 +67,8 @@
 #homePageHeader nav ol li:hover{
     background-color: hsl(0, 0%, 100%);
 }
-
-#menu img{
-    width: 30px;
+#menu{
+    z-index: 10;
 }
 .hamburguer{
     position: relative;
@@ -80,13 +101,14 @@
 @media (max-width: 700px) {
     
     ol{
-        z-index: 1000;
-        position: absolute;
+        z-index: 10;
+        position: fixed;
         top: 4em;
         right: 0;
         width: 0%;
         background-color: hsl(0, 0%, 100%);
         display: flex;
+        gap: 14px;
         flex-direction: column;
         overflow: hidden;
         transition: 200ms ease-in-out;
@@ -98,7 +120,7 @@
         width: 0%;
     }
     #menu{
-        z-index: 10000;
+        z-index: 10;
     }
 }
 
