--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -1,4 +1,5 @@
 main{
+    margin-top: 4em;
     padding-bottom: 10px;
 }
 .activities-link{
@@ -7,7 +8,7 @@ main{
     justify-content: center;
 }
 .activities-button{
-    background-color: hsl(39, 100%, 50%);
+    background-color: #ffa600;
     padding: 10px 20px;
     width: 200px;
     border-radius: 20px;
