retracao do cabecalho em 300ms para umefeito mais bonito diferenciado

--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -2,6 +2,7 @@
     position: relative;
 }
 #homePageHeader{
+    transition: 300ms ease-in-out;
     position: fixed;
     z-index: 100;
     top: 0;
