--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -193,44 +193,65 @@ main{
     flex-direction: column;
     gap: 60px;
 }
-.firstSection{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.landingDescription{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 20px;
-    line-height: 24px;
-}
-.landingFirstImg{
-    width: 100%;
-}
-.landingFirstImg img{
-    width: 100%;
-    max-height: 300px;
-    min-height: 200px;
-}
-.landingDescription h2{
-    font-size: 28px;
-}
-.landingDescription p{
-    font-size: 16px;
+@media (max-width: 720px) {
+    
+    .firstSection{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .landingFirstImg img{
+        width: 100%;
+        max-height: 300px;
+        min-height: 200px;
+    }
+    .landingDescription{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 20px;
+        line-height: 24px;
+    }
+    .landingFirstImg{
+        width: 100%;
+    }
+    .landingDescription h2{
+        font-size: 28px;
+    }
+    .landingDescription p{
+        font-size: 16px;
+    }
+    
+    iframe {
+        width: 100%;
+        aspect-ratio: 16 / 9;
+    }
 }
 
-iframe {
-    width: 100%;
-    aspect-ratio: 16 / 9;
-}
+@media (min-width: 720px) {
+    main{
+        padding-left: 8%;
+        padding-right: 8%;
+    }
 
-@media (min-width: 1000px) {
+    .firstSection{
+        display: flex;
+        flex-direction: row-reverse;
+    }
     #landingNavigation ol li{
         color: #fff;
     }
     #landingNavigation ol li:hover{
         color: #000;
+    }
+    .landingFirstImg img{
+        max-height: 300px;
+        width: 400px;
+    }
+    .landingDescription{
+        display: flex;
+        flex-direction: column;
+        line-height: 24px;
     }
 }
