--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -50,7 +50,7 @@ main{
     z-index: 10;
 }
 #homePageHeader nav ol li{
-    padding: 10px 20px 10px 20px;
+    padding: 20px;
     transition: 200ms;
     
 }
@@ -60,6 +60,7 @@ main{
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    gap: 20px;
 }
 .list-icons img{
     width: 25px;
@@ -131,4 +132,41 @@ footer{
     justify-content: center;
     height: 50px;
     width: 100%;
+}
+
+
+.voltar-cima{
+    z-index: 10000;
+    cursor: pointer;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 2px;
+    position: relative;
+    position: fixed;
+    bottom: 50px;
+    right: 24px;
+    width: 30px;
+    height: 30px;
+}
+.voltar-cima-visivel{
+    display: none;
+}
+
+.botao-voltar-cima{
+    display: flex;
+    justify-content: center;
+    background-color: #c0c0c0;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+.botao-voltar-cima::after{
+    content: '';
+    width: 10px;
+    height: 10px;
+    transform: rotate(135deg);
+    position: absolute;
+    top: 12px;
+    border-left: solid 2px #1b1b1b;
+    border-bottom: solid 2px #1b1b1b;
 }
