--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -113,6 +113,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 14px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -120,11 +121,13 @@
     color: hsl(0, 0%, 100%);
     text-align: center;
     font-size: 20px;
+    letter-spacing: 1px;
 }
 #tema h1{
     text-align: center;
     color: hsl(0, 0%, 100%);
-    font-size: 30px;
+    font-size: 34px;
+    letter-spacing: -1px;
 }
 
 #landingMainText #box{
