--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -1,3 +1,11 @@
+:root{
+    /* CSS HSL */
+    --gamboge: hsla(40, 98%, 47%, 1);
+    --tangerine: hsla(33, 96%, 48%, 1);
+    --cinnabar: hsla(13, 68%, 54%, 1);
+    --space-cadet: hsla(227, 47%, 24%, 1);
+    --caput-mortuum: hsla(7, 57%, 22%, 1);
+}
 main{
     margin-top: 4em;
     padding-bottom: 10px;
@@ -8,7 +16,7 @@ main{
     justify-content: center;
 }
 .activities-button{
-    background-color: #ffa600;
+    background-color: var(--space-cadet);
     padding: 10px 20px;
     width: 200px;
     border-radius: 20px;
