--- a/css/activitiesDetails.css
+++ b/css/activitiesDetails.css
@@ -1,3 +1,11 @@
+:root{
+    /* CSS HSL */
+    --gamboge: hsla(40, 98%, 47%, 1);
+    --tangerine: hsla(33, 96%, 48%, 1);
+    --cinnabar: hsla(13, 68%, 54%, 1);
+    --space-cadet: hsla(227, 47%, 24%, 1);
+    --caput-mortuum: hsla(7, 57%, 22%, 1);
+}
 .grid{
     display: flex;
     gap: 2px;
@@ -33,7 +41,6 @@
     width: 100%;
     top: 50%;
     transform: translateY(-50%);
-    background-color: aqua;
 }
 .backGroundGallery{
     z-index: 10000;
@@ -81,10 +88,10 @@
     justify-content: center;
     position: absolute;
     border-radius: 50%;
-    top: 10px;
-    right: 10px;
-    width: 50px;
-    height: 50px;
+    top: 30px;
+    right: 30px;
+    width: 30px;
+    height: 30px;
     background-color: #e7e7e7;
 }
 .closeNone{
@@ -94,7 +101,7 @@
     content: '';
     position: absolute;
     top: -1px;
-    width: 25px;
+    width: 23px;
     height: 2px;
     background-color: black;
     transform: rotate(90deg);
