--- a/css/innerHeader.css
+++ b/css/innerHeader.css
@@ -11,6 +11,6 @@
     transform: rotate(45deg);
     width: 13px;
     height: 13px;
-    border-bottom: solid 1px #000;
-    border-left: solid 1px #000;
+    border-bottom: solid 1px #fff;
+    border-left: solid 1px #fff;
 }
