--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -1,8 +1,15 @@
+:root{
+    /* CSS HSL */
+    --gamboge: hsla(40, 98%, 47%, 1);
+    --tangerine: hsla(33, 96%, 48%, 1);
+    --cinnabar: hsla(13, 68%, 54%, 1);
+    --space-cadet: hsla(227, 47%, 24%, 1);
+    --caput-mortuum: hsla(7, 57%, 22%, 1);
+}
 #cabecalho{
     background-color: #1b1b1b;
     width: 100%;
     height: 100vh;
-    color: #fff;
 }
 
 #landingNavigation{
@@ -90,7 +97,7 @@
 
 #landingMainText div{
     bottom: -100px;
-    background-color: #c0c0c0;
+    background-color: var(--cinnabar);
     border-radius: 5px;
     padding-top: 20px;
     display: flex;
