--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -28,6 +28,7 @@
     padding-right: 1em;
 }
 main{
+    transition: .4s;
     margin-top: 4em;
 }
 .header-visible{
@@ -49,77 +50,75 @@ main{
     width: 2.5em;
     margin-right: 10px;
 }
-#homePageHeader nav{
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-#homePageHeader nav ol{
-    display: flex;
-    gap: 10px;
-    box-shadow: 0px 2px 0px 0px #e0e0e0;
-    z-index: 10;
-}
-#homePageHeader nav ol li{
-    padding: 20px;
-    transition: 200ms;
-    
-}
-.list-icons{
-    display: flex;
-    align-items: center;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    gap: 20px;
-}
 .list-icons img{
     width: 25px;
     height: 25px;
 }
-#homePageHeader nav ol li:hover{
-    background-color: hsl(0, 0%, 100%);
-}
-#menu{
-    z-index: 10;
-}
-.hamburguer{
-    position: relative;
-    background-color: #fff;
-    width: 30px;
-    height: 2px;
-}
-.hamburguer::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 10px;
-    background-color: #fff;
-    width: 30px;
-    height: 2px;
-}
-.hamburguer::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 10px;
-    background-color: #fff;
-    width: 30px;
-    height: 2px;
-}
 #menu{
     cursor: pointer;
 }
-
+#homePageHeader nav ol{
+    display: flex;
+    gap: 10px;
+}
 @media (max-width: 700px) {
+    #homePageHeader nav ol{
+        gap: 10px;
+        box-shadow: 0px 2px 0px 0px #e0e0e0;
+        z-index: 10;
+    }
+    .list-icons{
+        gap: 20px;
+    }
+    .list-icons img{
+        width: 60px;
+        height: 34px;
+    }
+    #homePageHeader nav{
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    #menu{
+        z-index: 10;
+    }
+    .hamburguer{
+        position: relative;
+        background-color: #fff;
+        width: 30px;
+        height: 2px;
+    }
+    .hamburguer::before{
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 10px;
+        background-color: #fff;
+        width: 30px;
+        height: 2px;
+    }
+    .hamburguer::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 10px;
+        background-color: #fff;
+        width: 30px;
+        height: 2px;
+    }
     
+    #homePageHeader nav ol li{
+        padding: 20px;
+        transition: 200ms;
+        
+    }
     ol{
         z-index: 10;
         position: fixed;
         top: 4em;
         right: 0;
         width: 0%;
-        background-color: hsl(0, 0%, 100%);
+        background-color: var(--cinnabar);
         display: flex;
         gap: 14px;
         flex-direction: column;
@@ -180,4 +179,39 @@ footer{
     top: 14px;
     border-left: solid 2px var(--space-cadet);
     border-bottom: solid 2px var(--space-cadet);
+}
+.list-icons{
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+}
+.list-icons div{
+    display: flex;
+    gap: 14px;
+    align-items: center;
+}
+.list-icons div p{
+    color: #fff;
+
+}
+@media (min-width: 700px) {
+    .list-icons{
+        gap: 10px;
+    }
+    .cabecalho{
+        display: flex;
+    }   
+    .list-icons{
+        flex-direction: column;
+        width: 190px;
+    }
+    .list-icons:hover span{
+        width: 100%;
+    }
+    .list-icons span{
+        background-color: var(--tangerine);
+        width: 0%;
+        height: 2px;
+        transition: .5s;
+    }
 }
