--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -17,6 +17,7 @@ main{
 }
 .activities-button{
     background-color: var(--space-cadet);
+    border: solid 1px var(--space-cadet);
     padding: 10px 20px;
     width: 200px;
     border-radius: 20px;
@@ -30,12 +31,15 @@ main{
 .activities-button:hover{
     background-color: transparent;
 }
+.activities-button:hover p{
+    color: var(--space-cadet);
+}
 
 .hamburguer{
     background-color: #fff;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 700px) {
     #info{
         display: flex;
         flex-direction: column;
@@ -90,15 +94,21 @@ main{
     }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 700px) {
+    
     #info{
         display: flex;
         flex-wrap: wrap;
+        width: 100%;
+        padding-left: 14%;
+        padding-right: 14%;
     }
-    .activitie img{
+    .activitie .img{
+        background-size: cover;
+        background-position: center;
         width: 100%;
         height: 200px;
-        border-radius: 20px 20px 0 0;
+        border-radius: 20px;
     }
     #img-description{
         display: flex;
@@ -112,7 +122,7 @@ main{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        margin-bottom: 20px;
+        margin-bottom: 14px;
         width: 100%;
     }
     .description h1{
@@ -122,7 +132,6 @@ main{
         flex-direction: column;
         padding: 10px;
         width: 300px;
-        height: 400px;
     }
     #image-description{
         width: 100%;
