--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -46,9 +46,11 @@ main{
         gap: 60px;
     }
 
-    .activitie img{
+    .activitie .img{
         width: 100%;
-        max-height: 300px;
+        height: 240px;
+        background-size: cover;
+        background-position: center;
     }
     #img-description{
         display: flex;
