--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -162,6 +162,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 14px;
 }
 .icon_box img{
     width: 70px;
