--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -51,21 +51,15 @@
 #landingMainText{
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     background-size: cover;
     background-position: center;
-    height: calc(100% / 1.5 - 4em);
+    height: calc(100% / 1.8 - 4em);
+    padding-bottom: 10px;
 
 }
 
-.primeira{
-    background-image: url(../imagens/primeira_img.jpg);
-    background-position: top;
-    background-size: cover;
-    animation-name: backanimation;
-    animation-duration: 500ms;
-}
 
 @keyframes backanimation {
     from{
@@ -75,109 +69,30 @@
         opacity: 1;
     }
 }
-.segunda{
-    background-image: url(../imagens/1749555959361.jpg);
-    background-position: top;
-    background-size: cover;
-    animation-name: backanimation;
-    animation-duration: 500ms;
-}
-.terceira{
-    background-image: url(../imagens/1749556013214.jpg);
-    background-position: top;
-    background-size: cover;
-    animation-name: backanimation;
-    animation-duration: 500ms;
-}
-.quarta{
-    background-image: url(../imagens/1749556152476.jpg);
-    background-position: top;
-    background-size: cover;
-    animation-name: backanimation;
-    animation-duration: 500ms;
-}
-.quinta{
-    background-image: url(../imagens/1749556265346.jpg);
-    background-size: cover;
-    background-position: top;
-    animation-name: backanimation;
-    animation-duration: 500ms;
+
+
+
+.backgroundProgress{
+    display: flex;
+    gap: 20px;
+    box-shadow: #c0c0c0 1px 1px 10px;
+    border-radius: 20px;
+    background-color: #c0c0c0;
+    opacity: .9;
+    padding: 4px;
 }
 
-#landingMainText div{
-    bottom: -100px;
+.dots{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: solid 1px var(--cinnabar);
+}
+.atual{
+
     background-color: var(--cinnabar);
-    border-radius: 5px;
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#blur{
-    background-color: #1b1b1b;
-    opacity: 70%;
-    filter: blur(15px);
-    width: 100%;
-    height: 100%;
 }
 
-#tema{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 14px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-#tema p{
-    color: hsl(0, 0%, 100%);
-    text-align: center;
-    font-size: 20px;
-    letter-spacing: 1px;
-}
-#tema h1{
-    text-align: center;
-    color: hsl(0, 0%, 100%);
-    font-size: 34px;
-    letter-spacing: -1px;
-}
-
-#landingMainText #box{
-    position: absolute;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-    padding: 0 10px;
-    width: 100%;
-}
-
-.icon_box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 14px;
-}
-.icon_box img{
-    width: 70px;
-}
-
-.icon_box .description_box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 5px;
-}
-
-.icon_box .description_box p{
-    text-align: center;
-}
 
 #landingFooter{
     display: flex;
@@ -248,9 +163,62 @@ main{
         width: 100%;
         aspect-ratio: 16 / 9;
     }
+    #box{
+        background-color: var(--cinnabar);
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        margin-left: 6%;
+        margin-right: 6%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .icon_box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 14px;
+    }
+    .icon_box img{
+        width: 70px;
+    }
+    
+    .icon_box .description_box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 4px;
+        padding: 10px 5px;
+    }
+    
+    .icon_box .description_box p{
+        text-align: center;
+        color: #fff;
+    }
+    .icon_box .description_box h1{
+        text-align: center;
+        color: #fff;
+        font-size: 1.6em;
+    }
+    .description_box span{
+        color: #fff;
+        text-shadow: var(--gamboge) 1px 0px 1px;
+        font-weight: bold;
+        font-family: cursive;
+        font-size: 1.2em;
+        letter-spacing: 1px;
+    }
+    #landingMainText{
+        height: calc(100% / 1.8 - 4em);
+    }
 }
 
 @media (min-width: 700px) {
+    #landingMainText{
+        height: calc(100% / 1.5 - 4em);
+    }
     main{
         padding-left: 8%;
         padding-right: 8%;
@@ -295,5 +263,51 @@ main{
         height: 100%;
         aspect-ratio: 16/9;
         border-radius: 10px;
+    }
+    #box{
+        background-color: var(--cinnabar);
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        margin-left: 28%;
+        margin-right: 28%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .icon_box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 14px;
+    }
+    .icon_box img{
+        width: 70px;
+    }
+    
+    .icon_box .description_box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 5px;
+    }
+    
+    .icon_box .description_box p{
+        text-align: center;
+        color: #fff;
+    }
+    .icon_box .description_box h1{
+        font-size: 1.8em;
+        text-align: center;
+        color: #fff;
+    }
+    .description_box span{
+        color: #fff;
+        text-shadow: var(--gamboge) 1px 0px 1px;
+        font-weight: bold;
+        font-family: cursive;
+        font-size: 1.2em;
+        letter-spacing: 1px;
     }
 }
