--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -161,6 +161,7 @@ main{
     .footerDescription{
         display: flex;
         justify-content: space-between;
+        gap: 32px;
         width: 100%;
     }
     .footerDescription h3, .footerDescription p{
@@ -223,9 +224,9 @@ main{
     flex-direction: column;
     gap: 8px;
 }
-.listaParceiros a{
+.listaParceiros .verMais{
     background-color: var(--tangerine);
-    border-radius: 10px;
+    border-radius: 20px;
     color: #fff;
     padding: 5px 10px;
     text-align: center;
@@ -300,7 +301,7 @@ footer p{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        gap: 20px;
+        gap: 32px;
         width: 100%;
     }
     .footerDescription h3, .footerDescription p{
