--- a/css/activitiesDetails.css
+++ b/css/activitiesDetails.css
@@ -138,15 +138,12 @@
         flex-direction: column;
         gap: 1px;
         width: 25%;
-        height: 400px;
         overflow: scroll;
-    }
-    .img-principal{
-        display: flex;
-    
+        max-height: 400px;
     }
     .img-principal img{
         width: 100%;
+        max-height: 400px;
     }
     
     .img-auxiliares{
@@ -155,6 +152,7 @@
         gap: 1px;
         width: 25%;
         overflow: scroll;
+        max-height: 400px;
     }
     .img-auxiliares img{
         display: flex;
@@ -183,6 +181,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: aqua;
     }
     .backFilter{
         transition: 100ms;
@@ -197,9 +196,8 @@
     }
     .visualizacao img{
         z-index: 1000;
-        position: absolute;
         display: flex;
-        left: 0;
+        height: 100%;
     }
     
     .x-button{
