--- a/css/homeActivities.css
+++ b/css/homeActivities.css
@@ -14,6 +14,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 .activities-button{
     background-color: var(--space-cadet);
@@ -55,43 +56,30 @@ main{
     #img-description{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: flex-end;
+        
         width: 100%;
         height: 100%;
-    }
-    #img-description a{
-        width: 100%;
+        background: linear-gradient(to top, #1b1b1b, transparent 50%);
+        padding: 14px;
     }
     .description{
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-bottom: 20px;
-        width: 100%;
     }
     .description h1{
-        font-size: 20px;
-        margin-bottom: 10px;
+        color: #fff;
         font-weight: bold;
     }
-    .description p{
-        font-size: 16px;   
-    }
-    .activitie{
-        flex-direction: column;
-    }
-    #image-description{
-        width: 100%;
-    }
-    
     .conpound{
         display: flex;
         flex-direction: column;
         gap: 20px;
         border-radius: 20px;
         background-color: hsl(0, 0%, 100%);
+        width: 100%;
+    }
+    .activities-link{
+        width: 100%;
     }
 }
 
@@ -110,38 +98,27 @@ main{
         width: 100%;
         height: 200px;
         border-radius: 20px;
+        display: flex;
+        align-items: flex-end;
+        overflow: hidden;
     }
     #img-description{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: flex-end;
         width: 100%;
-        height: 100%;
-        padding: 20px;
-    }
-    .description{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-bottom: 14px;
-        width: 100%;
+        height: 100px;
+        background: linear-gradient(to top, #1b1b1b, transparent);
+        padding: 14px;
     }
     .description h1{
-        margin-bottom: 10px;
+        color: #fff;
     }
     .activitie{
         flex-direction: column;
-        padding: 10px;
+        padding: 14px;
         width: 300px;
     }
-    #image-description{
-        width: 100%;
-        padding: 10px;
-    }
-    
-    .conpound{
-        border-radius: 20px;
-        background-color: hsl(0, 0%, 100%);
-    }    
+      
 }
 
