--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -89,7 +89,7 @@
     border: solid 1px var(--cinnabar);
 }
 .atual{
-
+    box-shadow: var(--cinnabar) 0px 0px 5px;
     background-color: var(--cinnabar);
 }
 
@@ -120,6 +120,7 @@
     border-left: 1px solid transparent;
     border-right: 1px solid hsl(0, 100%, 100%);
     transform: rotate(45deg);
+    cursor: pointer;
 }
 
 main{
